# AutonRobo

./: README.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
install/custom_interfaces/share/custom_interfaces/action/: TrackingRobot.action
install/tracking_robot_pkg/lib/tracking_robot_pkg/: tracking_robot_client  tracking_robot_server
install/tracking_robot_pkg/share/tracking_robot_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/circle_wall_actions_pkg/: CMakeLists.txt
ros2_ws/src/circle_wall_actions_pkg/launch/: circle_wall_actions.launch.py
ros2_ws/src/circle_wall_actions_pkg/src/: circle_wall_client.cpp  circle_wall_server.cpp
ros2_ws/src/custom_interfaces/: CMakeLists.txt
ros2_ws/src/custom_interfaces/action/: CircleWall.action
ros2_ws/src/topic_publisher_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/topic_publisher_pkg/launch/: circle_wall.launch.py  simple_publisher.launch.py  simple_subscriber.launch.py  simple_topic_publisher.launch.py
ros2_ws/src/topic_publisher_pkg/src/: circle_wall.cpp  move_robot.cpp  simple_publisher.cpp  simple_subscriber.cpp  simple_topic_publisher.cpp
src/custom_interfaces/: CMakeLists.txt
src/tracking_robot_pkg/: CMakeLists.txt
src/tracking_robot_pkg/include/: coco.hpp
src/tracking_robot_pkg/launch/: tracking_robot.launch.py
src/tracking_robot_pkg/src/: coco.cpp  tracking_robot_client.cpp  tracking_robot_server.cpp  tracking_robot_waveshare.cpp
(+48 files in other folders)
